02-web-app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-app-svc
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
