03-web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ad3d5dc160ebd42c297290afbb1a84a1-1577751184.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /heavywork
        pathType: Prefix
        backend:
          service:
            name: web-app-svc
            port:
              number: 8080
